- Update `.gitignore` to exclude new sensitive and generated files (e.g., `.pem`, `.key`, `notebooks/*.html`). - Restrict Python version in `pyproject.toml` to `<3.13` and add PyTorch with CUDA dependencies. - Add initial documentation: `README.md` and `CLAUDE.md` for project overview and setup.

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,14 @@ data/raw/
 data/processed/
 mlruns/
 wandb/
+
+# UV
+uv.lock
+
+# Notebooks output
+notebooks/*.html
+
+# Secrets
+*.pem
+*.key
+secrets/
